# StandardRagDemo

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/text_files/: ml_intro.txt  rag_intro.txt
notebook/: document.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
